--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,10 @@
-.App {
-    /* display: flex;
-    flex-direction: column;
-    width: 100vw;
-    height: 100vh;
-    font-family: Rubik; */
-    
-}
-
 .fill {
-    /* display: flex;
-    flex-direction: column;
-    justify-content: center;
-    flex: 1; */
     background-color: #0f172a;
     display: grid;
-    grid-template-columns: repeat(12,1fr);
-    grid-template-rows: repeat(8,1fr);
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: repeat(8, 1fr);
     height: 100vh;
     width: 100%;
-    
 }
 .already-error-text {
     text-align: center;
@@ -50,4 +36,16 @@
     position: sticky;
     top: 0;
     z-index: 2;
+}
+.logout-btn {
+    display: "flex";
+    width: "116px";
+    height: "42px";
+    background-color: "#000000";
+    border-radius: "10px";
+    cursor: "pointer";
+    align-items: "center";
+    justify-content: "center";
+    color: "#ffffff";
+    font-weight: "bold";
 }
